refactor work with roles in DataGenerator (return bad code)